--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
-  <a href="/index.html" class="mdl-layout__tab is-active">Home</a>
-  <a href="/blog.html" class="mdl-layout__tab">Blog</a>
-  <a href="/contact.html" class="mdl-layout__tab">Contact</a>
+  <a href="{{ site.baseurl }}/index.html" class="mdl-layout__tab is-active">Home</a>
+  <a href="{{ site.baseurl }}/blog.html" class="mdl-layout__tab">Blog</a>
+  <a href="{{ site.baseurl }}/contact.html" class="mdl-layout__tab">Contact</a>
   <a href="{{ site.baseurl }}#features" class="mdl-layout__tab">Proposals</a>
 </div>
