--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,5 +2,5 @@
   <a href="{{ site.baseurl }}/index.html" class="mdl-layout__tab is-active">Home</a>
   <a href="{{ site.baseurl }}/blog.html" class="mdl-layout__tab">Blog</a>
   <a href="{{ site.baseurl }}/contact.html" class="mdl-layout__tab">Contact</a>
-  <a href="{{ site.baseurl }}#features" class="mdl-layout__tab">Proposals</a>
+  <a href="{{ site.baseurl }}#" class="mdl-layout__tab">Proposals</a>
 </div>
